# llmperf

./: .gitignore  NOTICE.txt  Power-README.md  README.md  analyze-raw.ipynb  analyze-token-benchmark-results.ipynb  configs.py  env_sample.txt  llm_correctness.py  llmperf.py  llmval.py  optional.txt  parse_results.py  pre-commit.sh  pyproject.toml  requirements-dev.txt  requirements.txt  token_benchmark_ray.py
benchmarks/: llama_3_8b_instruct_a10g.md  llama_3_8b_instruct_inf2.md  yi_1_5_34b_chat_4xa10g.md
benchmarks/results/a10g/: nim-meta_llama3-8b-instruct.csv  tgi-meta-llama_Meta-Llama-3-8B-Instruct.csv  vllm-meta-llama_Meta-Llama-3-8B-Instruct.csv
benchmarks/results/yi/4xa10g/: tgi-01-ai_Yi-1.5-34B-Chat.csv  vllm-01-ai_Yi-1.5-34B-Chat.csv
benchmarks/results/yi/4xa10g/tgi/: 01-ai_Yi-1.5-34B-Chat_cur_1.json  01-ai_Yi-1.5-34B-Chat_cur_16.json  01-ai_Yi-1.5-34B-Chat_cur_2.json  01-ai_Yi-1.5-34B-Chat_cur_32.json  01-ai_Yi-1.5-34B-Chat_cur_4.json  01-ai_Yi-1.5-34B-Chat_cur_64.json  01-ai_Yi-1.5-34B-Chat_cur_8.json
scripts/: benchmark.py
src/: samle_batch.yaml
src/llmperf/: common.py  common_metrics.py  dolly.txt  models.py  ray_llm_client.py  requests_launcher.py  sonnet.txt  utils.py
src/llmperf/ray_clients/: __init__.py  azureai_chat_completion.py  huggingface_client.py  litellm_client.py  llama.py  llama2.py  local_client.py  openai_chat_completions_client.py  power_client.py  predibase_client.py  sagemaker_client.py  togetherai_client.py  transformers_lib.py  triton_client.py  vertexai_client.py
(+35 files in other folders)
